--- a/package.json
+++ b/package.json
@@ -10,9 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
+    "@react-native-firebase/storage": "^22.2.1",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-native/new-app-screen": "0.80.0",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/native-stack": "^7.3.16",
+    "firebase": "^11.9.1",
     "react": "19.1.0",
     "react-native": "0.80.0",
-    "@react-native/new-app-screen": "0.80.0"
+    "react-native-blob-util": "^0.22.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
