--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,19 +5,19 @@ buildscript {
         compileSdkVersion = 35
         targetSdkVersion = 35
         ndkVersion = "27.1.12297006"
-        kotlinVersion = "2.1.20"
+        kotlinVersion = "1.8.20"  // ✅ needed
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:8.2.1") // ✅ must match AGP version
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
-        classpath ("com.google.gms:google-services:4.3.15")
-
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20") // ✅ must match
+        classpath("com.google.gms:google-services:4.3.15")
     }
 }
+
 
 apply plugin: "com.facebook.react.rootproject"
